Whiley2Boogie is compiling again!
Time for some testing.  No doubt, plenty of stuff has broken.